2006-06-07  Andrew MacLeod  <amacleod@redhat.com>

	PR middle-end/27793
	* tree-dfa.c (referenced_vars_dup_list): New.  List of duplicate 
	referenced_variables with matching DECL_UID's.
	(find_referenced_vars): Make sure duplicate list is empty to start.
	(referenced_var_p): Remove.
	(referenced_var_check_and_insert): Renamed from referenced_var_insert.  
	Check if var is in the list, and add if needed.  Update the duplicate
	list if a different var is in the list with the same DECL_UID.
	(add_referenced_var): Call routine to check and insert.
	* tree-ssa.c (delete_tree_ssa): Clear var_ann's on duplicates.
	* tree-flow.h (referenced_vars_dup_list): External declaration.

2006-06-07  Fred Fish  <fnf@specifix.com>

	* config/mips/t-elf (MULTILIB_MATCHES): Combine two entries
	into single entry.

2006-06-07  Paolo Bonzini  <bonzini@gnu.org>

	PR target/27390
	* reg-stack.c (subst_stack_regs_pat): Reorder resetting of
	the imaginary and real parts of a clobbered register.
	Emit insn to set the imaginary part.

2006-06-06  Peter Lemieszewski  <lemie@us.ibm.com>

	* config/s390/t-tpf (LIB2ADDEH): Include unwind-dw2-fde-glibc.c
	in lieu of unwind-dw2-fde.c.

2006-06-06  Francois-Xavier Coudert  <coudert@clipper.ens.fr>

	* config/i386/mingw32.h (GOMP_SELF_SPECS): Define.

2006-06-06  Ulrich Weigand  <uweigand@de.ibm.com>

	PR target/27842
	* config/rs6000/altivec.md (UNSPEC_VSLW): Remove.
	("altivec_vspltisw_v4sf", "altivec_vslw_v4sf"): Remove.
	("mulv4sf3", "absv4sf3", "negv4sf3"): Adapt users to use
	V4SImode temporaries and operations instead.

2006-06-06  Joseph S. Myers  <joseph@codesourcery.com>

	* config/mips/t-linux64 (tp-bit.c): Append to tp-bit.c, not
	dp-bit.c.

2006-06-06  Mike Stump  <mrs@apple.com>

	* Makefile.in: Rename to htmldir to build_htmldir to avoid
	installing during build.

2006-06-06  Maxim Kuvyrkov  <mkuvyrkov@ispras.ru>

	* params.def (PARAM_MAX_SCHED_EXTEND_REGIONS_ITERS): Change default
	value to 0.